# postdoc-scout-agent

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
configs/: domain_keywords.yml  institution_affiliates.yml  journal_tiers.yml  scoring_weights.yml  us_independent_research_institutes.yml  us_institution_affiliates.yml  us_institution_targets.yml
docs/: architecture.md  dashboard.md  fit_matching.md  github_about.md  limitations.md  pipeline.md  publication_calibration.md  roadmap.md  scoring_framework.md  seed_map.md
examples/: mock_candidates.yml  user_profile.example.yml
examples/demo/: example_candidate_extraction.md  example_discovery_queries.md  example_ecosystem.md  example_enriched_supervisors.md  example_evidence_collection.md  example_pipeline_summary.md  example_ranked_supervisors.md
src/postdoc_scout/: __init__.py  candidate_enricher.py  candidate_extractor.py  candidate_ranker.py  cli.py  config.py  dashboard_utils.py  evidence_collector.py  fit_matching.py  institution_mapper.py  models.py  opening_signals.py  pipeline.py  publication_calibration.py  query_builder.py  review_tracker.py  scoring.py  scout.py  seed_map_validation.py
tests/: test_candidate_enricher.py  test_candidate_extractor.py  test_candidate_ranker.py  test_cli.py  test_dashboard_utils.py  test_evidence_connectors.py  test_fit_matching.py  test_opening_signals_review_tracker.py  test_pipeline.py  test_publication_calibration.py
tests/fixtures/: candidate_extraction_ranking_mock.json  (+1 more)
(+6 files in other folders)
