[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "postdoc-scout-agent"
version = "0.1.0"
description = "A postdoctoral supervisor scouting agent for translational digital medicine and clinical AI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "postdoc-scout-agent contributors" }
]
dependencies = [
  "typer",
  "pydantic",
  "pandas",
  "httpx",
  "pyyaml",
  "rich",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
dashboard = [
  "streamlit",
]

[project.scripts]
postdoc-scout = "postdoc_scout.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
